feat: normalize room equipment data structure
Equipment alanı virgülle ayrılmış string yapıdan Many-to-Many tablo yapısına taşındı

RoomEquipments ara tablosu üzerinden 3. Normal Form (3NF) veritabanı düzeni kuruldu

RoomService üzerinde .Include() ile Eager Loading yapılarak donanım listeleme sağlandı
Create ve Update süreçlerinde ekipmanların otomatik eşleşmesi/oluşturulması mantığı eklendi

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PG5CEAL\\SQLEXPRESS;Database=MeetingRoomDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-PG5CEAL\\SQLEXPRESS;Database=MeetingRoomDB2;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
